objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account Name Text Display for Dataloader</description>
        <formula>Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>The number of days since the opportunity was created. For a closed opportunity, the number of days between the creation date and the closed date</description>
        <formula>IF(IsClosed,( 
CloseDate - DATEVALUE(CreatedDate)), 
TODAY() - DATEVALUE(CreatedDate))</formula>
        <inlineHelpText>The number of days since the opportunity was created. For a closed opportunity, the number of days between the creation date and the closed date</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Type__c</fullName>
        <description>Is our solution supporting the client&apos;s sales process or are we competing with others for business that is won</description>
        <label>Bid Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Best Solution - Not Competitive</fullName>
                </value>
                <value>
                    <fullName>Client Has Won</fullName>
                </value>
                <value>
                    <fullName>Client Must Win</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Created_Date__c</fullName>
        <description>Required for custom sales report api - testing created date field to display new opportunities for this and last week.</description>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden</inlineHelpText>
        <label>Custom Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Project Lead&apos;s Email Address</description>
        <formula>Project_Lead__r.Email</formula>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Ending Date of Service for this opportunity</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Type__c</fullName>
        <description>Engagement Type field is a dependent pick list of Status and will be required when an opportunity is Closed/Won. Fires off a workflow to notify certain individuals</description>
        <inlineHelpText>This will notify the specific department/group when a Opportunity has been closed won</inlineHelpText>
        <label>Engagement Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Projects</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Workforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engineering_Margin__c</fullName>
        <description>Manually input of the engineering margin in %</description>
        <label>Engineering Margin %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Engineering_Revenue__c</fullName>
        <description>Revenue relating to the engineering service component</description>
        <label>Engineering Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Opportunity_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Opportunity Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Forecasted_Amount__c</fullName>
        <description>GVM x Probability</description>
        <formula>Amount * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <description>GM% is Total Revenue divided by Gross Margin Value or Amount</description>
        <formula>Amount/ Total_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>Project Lead&apos;s Mobile Number</description>
        <formula>Project_Lead__r.MobilePhone</formula>
        <label>Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_or_Renewal__c</fullName>
        <description>Is this opportunity new business or renewal</description>
        <label>New Business or Renewal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Opportunity2__c</fullName>
        <description>Determines if an opportunity was created last week in the form that is required for &quot;Sales Report - Open Opportunties&quot;. Formula taken from this forum: https://success.salesforce.com/ideaview?id=08730000000KFAUAA4</description>
        <formula>case(mod(today() - DATE(1985,6,24),7),
6, if(DATEVALUE(CreatedDate) - today() &lt;=0, if(DATEVALUE(CreatedDate) - today() &gt;-7,&quot;This Week&quot;,if(today() -   DATEVALUE(CreatedDate) &lt;=14,&quot;Last Week&quot;,&quot;&quot;)),if(DATEVALUE(CreatedDate) - today() &lt;8,&quot;Next Week&quot;,&quot;&quot;)), 
0, if(DATEVALUE(CreatedDate) - today() &lt;=7, if(DATEVALUE(CreatedDate) - today() &gt;-1,&quot;This Week&quot;,if(today() -   DATEVALUE(CreatedDate) &lt;=8,&quot;Last Week&quot;,&quot;&quot;)),if(DATEVALUE(CreatedDate) - today() &lt;15,&quot;Next Week&quot;,&quot;&quot;)), 
1, if(DATEVALUE(CreatedDate) - today() &lt;=6, if(DATEVALUE(CreatedDate) - today() &gt;-2,&quot;This Week&quot;,if(today() -   DATEVALUE(CreatedDate) &lt;=9,&quot;Last Week&quot;,&quot;&quot;)),if(DATEVALUE(CreatedDate) - today() &lt;14,&quot;Next Week&quot;,&quot;&quot;)), 
2, if(DATEVALUE(CreatedDate) - today() &lt;=5, if(DATEVALUE(CreatedDate) - today() &gt;-3,&quot;This Week&quot;,if(today() -   DATEVALUE(CreatedDate) &lt;=10,&quot;Last Week&quot;,&quot;&quot;)),if(DATEVALUE(CreatedDate) - today() &lt;13,&quot;Next Week&quot;,&quot;&quot;)), 
3, if(DATEVALUE(CreatedDate) - today() &lt;=4, if(DATEVALUE(CreatedDate) - today() &gt;-4,&quot;This Week&quot;,if(today() -   DATEVALUE(CreatedDate) &lt;=11,&quot;Last Week&quot;,&quot;&quot;)),if(DATEVALUE(CreatedDate) - today() &lt;12,&quot;Next Week&quot;,&quot;&quot;)), 
4, if(DATEVALUE(CreatedDate) - today() &lt;=3, if(DATEVALUE(CreatedDate) - today() &gt;-5,&quot;This Week&quot;,if(today() -   DATEVALUE(CreatedDate) &lt;=12,&quot;Last Week&quot;,&quot;&quot;)),if(DATEVALUE(CreatedDate) - today() &lt;11,&quot;Next Week&quot;,&quot;&quot;)), 
5, if(DATEVALUE(CreatedDate) - today() &lt;=2, if(DATEVALUE(CreatedDate) - today() &gt;-6,&quot;This Week&quot;,if(today() -   DATEVALUE(CreatedDate) &lt;=13,&quot;Last Week&quot;,&quot;&quot;)),if(DATEVALUE(CreatedDate) - today() &lt;10,&quot;Next Week&quot;,&quot;&quot;)),
 &quot;&quot;)</formula>
        <label>New Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Opportunity_Amount__c</fullName>
        <description>Field used in Sales reporting for new opportunities</description>
        <formula>IF( New_Opportunity2__c==&quot;Y&quot;,  Amount ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden</inlineHelpText>
        <label>New Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Opportunity__c</fullName>
        <description>Returns True if Created Date in last 7 days</description>
        <formula>DATEVALUE(CreatedDate) &gt; Today()-7</formula>
        <inlineHelpText>Opportunities that are created in the last 7 days</inlineHelpText>
        <label>New Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Change__c</fullName>
        <label>Opportunity Stage Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Strategy__c</fullName>
        <label>Opportunity Strategy</label>
        <length>164</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <description>Other Reason if not specified in Reason__c picklist</description>
        <label>Other Reason</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Address__c</fullName>
        <description>Project Lead&apos;s Address</description>
        <formula>if(LEN(Project_Lead__r.MailingStreet)&gt;0, Project_Lead__r.MailingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Project_Lead__r.MailingCity)&gt;0, Project_Lead__r.MailingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(Project_Lead__r.MailingState)&gt;0, Project_Lead__r.MailingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Project_Lead__r.MailingPostalCode)&gt;0, Project_Lead__r.MailingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN(Project_Lead__r.MailingCountry) &gt;0, Project_Lead__r.MailingCountry,&quot;&quot;)</formula>
        <label>Postal Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Lead_Company__c</fullName>
        <formula>Project_Lead__r.Account.Name</formula>
        <label>Project Lead Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Lead_Salutaion__c</fullName>
        <description>Used for full name will salutations of project lead</description>
        <formula>IF(
ISPICKVAL(Project_Lead__r.Salutation,&quot;&quot;),Project_Lead__r.FirstName&amp;&quot; &quot;&amp;Project_Lead__r.LastName,Text(Project_Lead__r.Salutation)&amp;&quot; &quot;&amp;Project_Lead__r.FirstName&amp;&quot; &quot;&amp;Project_Lead__r.LastName
)</formula>
        <label>Project Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact for this Project</description>
        <label>Project Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <description>Purchase Order Number for this Opportunity</description>
        <label>Purchase Order #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason for Closed Deal</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Solution Quality</fullName>
                </value>
                <value>
                    <fullName>Unique Solution</fullName>
                </value>
                <value>
                    <fullName>No Client Action</fullName>
                </value>
                <value>
                    <fullName>Outsold</fullName>
                </value>
                <value>
                    <fullName>Better Solution</fullName>
                </value>
                <value>
                    <fullName>Client Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Client Lost</fullName>
                </value>
                <value>
                    <fullName>Best No Bid</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Customer Service Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AmendedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the relationship to your Amended Contract.</description>
        <inlineHelpText>Lookup to your Amended Contract.</inlineHelpText>
        <label>Amended Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Amendment Opportunities</relationshipLabel>
        <relationshipName>AmendmentOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to kick off automatic asset and subscription conversion.</description>
        <inlineHelpText>SteelBrick CPQ uses this field to automatically convert assets and subscriptions.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to primary quote on this opportunity.</description>
        <inlineHelpText>SteelBrick CPQ uses this to point to the primary quote on this opportunity.</inlineHelpText>
        <label>Primary Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>SBQQ__Quote__c.SBQQ__Opportunity2__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotePricebookId__c</fullName>
        <description>Custom pricebook ID field that updates the standard Pricebook2Id field. Use to automatically drive pricebook selection from workflow rules.</description>
        <label>Quote Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this opportunity is a renewal opportunity.</description>
        <inlineHelpText>Indicates this opportunity is a renewal opportunity.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract being renewed by this renewal opportunity. In case opportunity rolls up several contracts this points at the master contract.</description>
        <inlineHelpText>Contract being renewed by this renewal opportunity. If the several contracts roll up to this opportunity, this points at the master contract.</inlineHelpText>
        <label>Renewed Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>RenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date2__c</fullName>
        <description>The date when the engagement is scheduled to commence</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <description>The date when the engagement is scheduled to commence</description>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date when the engagement is scheduled to commence</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strategic_Or_Tactical__c</fullName>
        <description>Used for determining if the sale was strategical or tactical</description>
        <label>Strategic Or Tactical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Tactical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <description>Manually inserted in and is the total revenuw generated from engineers and outsourced services</description>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VF_Closed_Won_Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only check if sendPdfForClosedWonTrigger fires off notification for a record</description>
        <inlineHelpText>Hidden</inlineHelpText>
        <label>VF Closed Won Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VF_Closed_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers off sendPdfForClosedWonTrigger trigger after update to send PDF to recipients</description>
        <label>VF Closed Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>i__DaysSinceLastMail__c</fullName>
        <description>Number of days since the last email (inbound or outbound)</description>
        <formula>NOW() -  i__LastMailTime__c</formula>
        <label>Days Since Last Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i__LastInboundMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email sent by this Opportunity</description>
        <label>Last Inbound Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Opportunitys (Last Inbound Email)</relationshipLabel>
        <relationshipName>LastInboundEmailForOpportunitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastInboundTime__c</fullName>
        <description>Time of the most recent email sent by this Opportunity</description>
        <formula>i__LastInboundMail__r.i__Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time of the most recent email sent by this Opportunity</inlineHelpText>
        <label>Last Inbound Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastMailTimeDelta__c</fullName>
        <description>Difference, in days, between the time the last outbound email was sent and the time the last inbound email was received</description>
        <formula>i__LastOutboundTime__c -  i__LastInboundTime__c</formula>
        <label>Last Mail Time Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i__LastMailTime__c</fullName>
        <description>Time of the most recent email sent or received by this Opportunity</description>
        <formula>i__LastMail__r.i__Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time of the most recent email sent or received by this Opportunity</inlineHelpText>
        <label>Last Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email to or from this Opportunity</description>
        <label>Last Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Opportunitys (Last Email)</relationshipLabel>
        <relationshipName>LastEmailForOpportunitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastOutboundMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email sent to this Opportunity</description>
        <label>Last Outbound Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Opportunitys (Last Outbound Email)</relationshipLabel>
        <relationshipName>LastOutboundEmailForOpportunitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastOutboundTime__c</fullName>
        <description>Time of the most recent email sent to this Opportunity</description>
        <formula>i__LastOutboundMail__r.i__Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time of the most recent email sent to this Opportunity</inlineHelpText>
        <label>Last Outbound Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>staff_contributor__c</fullName>
        <label>Contributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dominic Felt</fullName>
                </value>
                <value>
                    <fullName>Fred Giannaros</fullName>
                </value>
                <value>
                    <fullName>Hasib Al-Amin</fullName>
                </value>
                <value>
                    <fullName>John McVicker</fullName>
                </value>
                <value>
                    <fullName>Matthew	Rigley</fullName>
                </value>
                <value>
                    <fullName>Olivia Maskaric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>Project_Lead_Salutaion__c</columns>
        <columns>Project_Lead_Company__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Closed_Opportunities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>Project_Lead_Salutaion__c</columns>
        <columns>Project_Lead_Company__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Closed Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Opportunities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Opportunity_Strategy__c</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Age__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_This_Week</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_Opportunities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>Bid_Type__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.FORECAST_CATEGORY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Open Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Amount_Gross_Margin_Value_Required</fullName>
        <active>true</active>
        <description>When Closed Won, Gross Margin Value required</description>
        <errorConditionFormula>AND(
ISPICKVAL( StageName, &quot;Closed Won&quot;), 
ISNULL(Amount)
)</errorConditionFormula>
        <errorDisplayField>Amount</errorDisplayField>
        <errorMessage>Gross Margin Value (Amount) can not be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Reason</fullName>
        <active>true</active>
        <description>If Closed select Reason__c</description>
        <errorConditionFormula>AND(IsClosed, ISPICKVAL(Reason__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>Please select Reason for Closing Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Engagement_Type_Start_Date</fullName>
        <active>true</active>
        <description>If Opportunity is marked as Closed/Won, Engagement Type must be selected and a Start Date must be set.</description>
        <errorConditionFormula>AND(ISPICKVAL( StageName, &quot;Closed Won&quot;), OR(ISBLANK(Start_Date__c),ISBLANK(End_Date__c),ISPICKVAL(Engagement_Type__c, &quot;&quot;)
)
)</errorConditionFormula>
        <errorMessage>Please select Engagement Type and set Start and End Date  for Close/Won Opportunities</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Sales_Details_Required</fullName>
        <active>true</active>
        <description>Required Sales Details when an Opportunity is Close Won</description>
        <errorConditionFormula>AND(
  ISPICKVAL( StageName, &quot;Closed Won&quot;), 
  OR(
    ISPICKVAL( Strategic_Or_Tactical__c , &quot;&quot;),   
    Engineering_Revenue__c&lt;=0,
    ISNULL(Engineering_Revenue__c),
    ISBLANK( Engineering_Margin__c),
    ISBLANK( Project_Lead__c)
  )
    
)</errorConditionFormula>
        <errorMessage>All Closed Won Opportunities will require the following fields to be completed:
Strategic or Tactical Pick list, Engineering Revenue &amp; Margin and the Project Lead Contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Gross_Margin_Inserted_on_Closed_Stages</fullName>
        <active>true</active>
        <description>All Closed Won or Lost opportunities must include Gross Margin Value before closing stage</description>
        <errorConditionFormula>AND(
IsClosed,  
OR( Amount &lt;= 0, ISNULL(Amount))
)</errorConditionFormula>
        <errorDisplayField>Amount</errorDisplayField>
        <errorMessage>Gross Margin Value (Amount) is required if opportunity is Closed Won or Lost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Reason_Required</fullName>
        <active>true</active>
        <description>Must specify other reason if no specific Reason is picked</description>
        <errorConditionFormula>AND(
  ISPICKVAL(Reason__c , &quot;Other&quot;),
   ISBLANK( Other_Reason__c)
)</errorConditionFormula>
        <errorDisplayField>Other_Reason__c</errorDisplayField>
        <errorMessage>Please specific other reason for Closing this Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Revenue_Inserted_on_Closed_Stages</fullName>
        <active>false</active>
        <description>All Closed Won or Lost opportunities must include Total Revenue before closing stage</description>
        <errorConditionFormula>AND(
IsClosed,  
OR(Total_Revenue__c &lt;= 0, ISNULL(Total_Revenue__c))
)</errorConditionFormula>
        <errorDisplayField>Total_Revenue__c</errorDisplayField>
        <errorMessage>Total Revenue is required if opportunity is Closed Won or Lost</errorMessage>
    </validationRules>
</CustomObject>